# tinytorch

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART_UV.md  README.md  WORKFLOW.md  activate.sh  pyproject.toml  rebuild-site.sh  requirements.txt  settings.ini  setup-uv.sh
.github/workflows/: build-pdf.yml  publish-dev.yml  publish-live.yml
binder/: README.md  postBuild  requirements.txt
docs/: STUDENT_QUICKSTART.md  _config_pdf.yml  _toc_pdf.yml  cifar10-training-guide.md  tinytorch-assumptions.md
docs/development/: MODULE_ABOUT_TEMPLATE.md  module-rules.md
docs/nbgrader/: NBGrader_Quick_Reference.md
milestones/04_1998_cnn/: 02_lecun_cifar10.py
milestones/05_2017_transformer/: 00_vaswani_attention_proof.py
milestones/06_2018_mlperf/: 01_baseline_profile.py  README.md
modules/: LEARNING_PATH.md
modules/01_tensor/: ABOUT.md  README.md  tensor.ipynb  tensor.py  tensor_dev.py
modules/02_activations/: ABOUT.md  activations.ipynb  activations.py  activations_dev.py
modules/03_layers/: ABOUT.md  layers.ipynb  layers_dev.py  layers_solution.py
modules/04_losses/: ABOUT.md  losses.ipynb  losses_dev.py  losses_solution.py
paper/: paper.tex  references.bib
scripts/: clean_notebooks.py  clean_notebooks.sh  clean_source_files.py  clean_source_files.sh  generate_notebooks.py  generate_notebooks.sh  process_all_modules.py  process_all_modules.sh  remove_solutions.py  remove_solutions.sh
site/: .nojekyll  README.md  _config.yml  _toc.yml  build_pdf.sh  build_pdf_simple.sh  checkpoint-system.md  community.md  faq.md  intro.md  learning-journey-visual.md  learning-progress.md  prepare_notebooks.sh  prerequisites.md  quickstart-guide.md  requirements.txt  student-workflow.md
tests/: README.md  integration_cnn_test.py  integration_mnist_test.py  integration_simple_test.py  integration_tinygpt_test.py  integration_xor_test.py  minimal_training_example.py  module_status_report.py  working_training.py
tinytorch/: __init__.py  _modidx.py
tito/: main.py
(+247 files in other folders)
